# panel

./: .env.example  .gitignore  ARCHITECTURE.md  CLA.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DESIGN_SYSTEM.md  DEVELOPMENT.md  Dioxus.toml  QUICK_START.md  README.md  SECURITY.md  TESTING.md  check-dashboard.mts  debug-nav.mts  index.html  input.css  install.sh  package-lock.json  package.json  panel.service  panel.toml  panel.toml.example  safelist.html  test_middleware.rs
.devcontainer/: README.md  devcontainer.json  post-create.sh
.githooks/: pre-commit
.github/: pull_request_template.md
.github/agents/: hardening-fixer.agent.md  security-auditor.agent.md
.github/instructions/: services.instructions.md
.github/workflows/: ci.yml  deploy-pages.yml  e2e.yml  release.yml
assets/: tailwind.css
landing/: index.html
migrations/: 20250306000001_create_users.sql  20250306000001_initial_schema.sql  20250306000002_create_packages.sql  20250306000003_create_quotas.sql  20250306000004_create_branding.sql  20250306000005_create_sites.sql  20250306000006_create_databases.sql  20250306000007_create_dns.sql  20250306000008_create_email.sql  20250306000009_create_tickets.sql  20250306000010_create_audit_log.sql  20250306000011_create_usage_tracking.sql  20250306000012_add_system_user_fields.sql  20250310000013_create_ftp_accounts.sql  20250310000014_create_git_repos.sql  20260309000014_email_send_limits.sql  20260309000015_create_cron_jobs.sql  20260309000016_email_advanced.sql  20260309000017_email_regex_forwarders.sql  20260309000018_dkim_keys.sql  20260309000019_antispam.sql  20260310000020_add_client_detail_fields.sql  20260310000021_add_hsts_fields.sql  20260311000021_create_firewall_rules.sql  20260311000022_create_ftp_session_stats.sql  20260312000023_create_web_stats.sql  20260312000024_create_backups.sql  20260312000025_add_branding_theme.sql  20260312000027_add_developer_role.sql  20260312000028_create_team_invitations.sql  20260312000029_create_team_site_access.sql  20260312000030_add_atomic_deploy_to_git_repos.sql  20260313000026_fix_database_type_check.sql  20260313000027_add_basic_auth.sql  20260315000031_create_background_tasks.sql
sandbox/: Dockerfile  docker-compose.test.yml  entrypoint.sh  panel.toml
sandbox/scripts/: install-wordpress.sh  seed-panel.sh  wait-for-services.sh
sandbox/seed/: 001_users.sql  002_packages.sql  003_sites.sql  004_databases.sql  005_dns.sql  006_email.sql  007_ftp.sql  008_cron.sql  009_git.sql  010_firewall.sql  011_tickets.sql  012_branding.sql  013_quotas.sql  014_backups.sql  015_audit_log.sql
src/: lib.rs  lucide.rs  main.rs
src/auth/: crypto.rs  guards.rs  jwt.rs  mod.rs  totp.rs
src/db/: antispam.rs  audit.rs  backup.rs  basic_auth.rs  branding.rs  cron.rs  databases.rs  dns.rs  email.rs  ftp.rs  git.rs  mod.rs  packages.rs  quotas.rs  sites.rs  stats.rs  tasks.rs  team.rs  tickets.rs  usage.rs  users.rs
src/models/: auth.rs  backup.rs  billing.rs  branding.rs  cron.rs  database.rs  dns.rs  domain.rs  email.rs  files.rs  firewall.rs  ftp.rs  git.rs  mod.rs  package.rs  quota.rs  security.rs  service.rs  site.rs  stats.rs  task.rs  team.rs  ticket.rs  user.rs
src/server/: antispam.rs  auth.rs  backup.rs  branding.rs  cron.rs  databases.rs  dns.rs  email.rs  files.rs  firewall.rs  ftp.rs  git.rs  mod.rs  monitoring.rs  packages.rs  security.rs  services.rs  sites.rs  ssl.rs  stats.rs  tasks.rs  team.rs  tickets.rs  usage.rs  users.rs
src/services/: awstats.rs  basic_auth.rs  certbot.rs  cgroups.rs  clamav_stub.rs  cloudflare.rs  dkim.rs  dovecot.rs  git.rs  goaccess.rs  heartbeat.rs  janitor.rs  mail_queue.rs  mailscanner.rs  mariadb.rs  mod.rs  modsecurity.rs  openlitespeed.rs  osuser.rs  phpfpm.rs  phpmyadmin.rs  postfix.rs  postfix_policy.rs  pureftpd.rs  rspamd.rs  spamassassin.rs  ssh_hardening.rs  system.rs  ufw.rs  webalizer.rs
src/ui/admin/: admin_email.rs  mod.rs  monitoring.rs  security.rs
src/utils/: config.rs  mod.rs  validators.rs
templates/: dovecot.conf  ols_vhost.conf.j2  phpmyadmin_config.inc.php  phpmyadmin_signon.php  postfix_master.cf  zone_file.j2
tests/: auth_tests.rs  path_safety_tests.rs  quota_tests.rs  validators_tests.rs
tests/e2e/: global-setup.ts  playwright.config.ts
(+54 files in other folders)
