[package]
name = "panel"
version = "0.5.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
# Dioxus & fullstack
dioxus = { version = "0.7", features = ["fullstack", "router"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Regex & validation (works on WASM)
regex = "1.12"
validator = { version = "0.19", features = ["derive"] }

# Storage & utilities
lazy_static = "1.5"
once_cell = "1.21"
futures = "0.3"

uuid = { version = "1.20", features = ["v4", "serde"] }
shellexpand = { version = "3", optional = true }

# === Server-only dependencies (gated behind "server" feature) ===

# Web framework (versions owned by dioxus-server to avoid duplicates)
http = { version = "1.4", optional = true }
hyper = { version = "1.8", optional = true }

# Async runtime
tokio = { version = "1.50", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
    "sync",
    "time",
    "signal",
    "process",
], optional = true }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
    "json",
], optional = true }

# Authentication & security
jsonwebtoken = { version = "9.3", optional = true }
argon2 = { version = "0.5", optional = true }
totp-rs = { version = "5.7", features = [
    "otpauth",
    "gen_secret",
], optional = true }
qrcode = { version = "0.14", default-features = false, optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.9", features = ["os_rng"], optional = true }

# Logging (subscriber is server-only)
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
], optional = true }

# Templates
askama = { version = "0.12", optional = true }

# System operations
nix = { version = "0.31", features = ["process"], optional = true }
async-trait = { version = "0.1", optional = true }

# Configuration
toml = { version = "1.0", optional = true }
dotenv = { version = "0.15", optional = true }

# S3-compatible storage (for backups)
rust-s3 = { version = "0.37", features = ["tokio"], optional = true }

# Templating for configs
tera = { version = "1.20", optional = true }

# Cloudflare API
reqwest = { version = "0.13", features = [
    "json",
    "rustls",
], default-features = false, optional = true }

# Rate limiting
governor = { version = "0.10", optional = true }

# Temporary directory management
tempfile = { version = "3", optional = true }

# Fullstack context (for cookie access in server functions)
dioxus-fullstack-core = { version = "0.7", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.20", features = ["v4", "serde", "js"] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Crypto",
    "Navigator",
    "Clipboard",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "HtmlElement",
    "Document",
    "Request",
    "RequestInit",
    "Response",
] }

[dev-dependencies]

[features]
default = ["server"]
server = [
    "dioxus/server",
    "dep:http",
    "dep:hyper",
    "dep:tokio",
    "dep:sqlx",
    "dep:jsonwebtoken",
    "dep:argon2",
    "dep:totp-rs",
    "dep:qrcode",
    "dep:hmac",
    "dep:sha2",
    "dep:base64",
    "dep:hex",
    "dep:aes-gcm",
    "dep:rand",
    "dep:tracing-subscriber",
    "dep:askama",
    "dep:nix",
    "dep:async-trait",
    "dep:toml",
    "dep:dotenv",
    "dep:rust-s3",
    "dep:tera",
    "dep:reqwest",
    "dep:governor",
    "dep:dioxus-fullstack-core",
    "dep:tempfile",
    "dep:shellexpand",
]
web = ["dioxus/web"]
ssr = []

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
debug = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
